--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src/index.ts"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Migsar Navarro<migsar.navarro@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "github.com/migh/strogoff-mail"
+  },
   "dependencies": {
-    "lit-html": "^0.10.2",
-    "puppeteer": "^1.5.0"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.1.1",
-    "source-map-loader": "^0.2.3",
-    "typescript": "^2.9.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
   }
