--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node src/index.ts"
+    "test": "mocha",
+    "dev": "webpack-serve"
   },
   "author": "Migsar Navarro<migsar.navarro@gmail.com>",
   "license": "MIT",
@@ -14,9 +14,13 @@
     "url": "github.com/migh/strogoff-mail"
   },
   "dependencies": {
+    "toml": "^2.3.3"
   },
   "devDependencies": {
+    "mocha": "^5.2.0",
+    "source-map-loader": "^0.2.3",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-serve": "^1.0.4"
   }
 }
